--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
             <option value="tech">Tecnología</option>
         </select>
         <br>
-        <input type="submit" value="¡Registrarse!">
+        <h2>Gracias</h2>
+        <br>
+        <input type="submit" value="Registrarse">
     </form>
 </body>
 </html>
